# daml-sast

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml  release.yml
daml_sast/: __init__.py  __main__.py  cli.py  config.py  model.py  suppress.py
daml_sast/analysis/: lifecycle.py  party.py
daml_sast/engine/: runner.py
daml_sast/ir/: lower.py  model.py
daml_sast/lf/: archive.py  compat.py  decoder.py  limits.py  loader.py  resolve.py
daml_sast/lf/proto/: __init__.py
daml_sast/lf/proto/com/digitalasset/daml/lf/archive/: daml_lf1_pb2.py  daml_lf2_pb2.py  daml_lf_pb2.py
daml_sast/lf/proto_src/: VERSION
daml_sast/report/: json_report.py  sarif_report.py
daml_sast/rules/: base.py  examples.py  registry.py  version.py
daml_sast/util/: baseline.py  fingerprint.py  fs.py  version.py
daml_sast/walker/: walk.py
docs/: 01-repo-structure.md  02-core-ir.md  03-rule-interface.md  04-cli-scaffold.md  05-example-rules.md  06-finding-format.md  07-todo.md  08-rule-catalog.md  09-interpret-findings.md  10-telemetry-privacy.md  README.md  ci-examples.md  getting-started-project.md  policy-examples.md  semgrep-parity.md  terms.md
scripts/: dar_tests.py  fetch_dars.py  gen_sample_dars.py
testdata/: minimal.dar
tests/: test_baseline.py  test_cli_exit_codes.py  test_compat.py  test_config.py  test_decoder_fallback.py  test_lf_limits.py  test_report_formats.py  test_rules_dalf.py  test_smoke.py  test_support_matrix.py  test_suppress.py
