[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daml-sast"
version = "0.0.1"
description = "Bandit-like SAST analyzer for Daml-LF artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["daml", "sast", "static-analysis", "security", "sarif"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Operating System :: OS Independent",
]
dependencies = [
  "protobuf==6.33.5",
  "tomli==2.0.2; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/cchostak/daml-sast"
Repository = "https://github.com/cchostak/daml-sast"
Issues = "https://github.com/cchostak/daml-sast/issues"

[project.optional-dependencies]
dev = [
  "grpcio-tools==1.76.0",
]

[tool.setuptools.packages.find]
include = ["daml_sast*"]
exclude = ["tests*", "testdata*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
daml_sast = [
  "lf/proto_src/**/*.proto",
  "lf/proto_src/VERSION",
  "lf/proto/**/*.py",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  "daml_sast/lf/proto",
  "daml_sast/lf/proto/**",
  "daml_sast/lf/proto_src/**",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
exclude = "daml_sast/lf/proto/.*"

[project.scripts]
daml-sast = "daml_sast.cli:main"
